--- a/inter.html
+++ b/inter.html
@@ -11,6 +11,6 @@
 
 </head>
 <body>
-  <img class="body" src="/colorlib-search-23/images/inter.jpg">
+  <img class="body" src="/images/inter.jpg">
 </body>
 </html>
