--- a/back.html
+++ b/back.html
@@ -11,6 +11,6 @@
 
 </head>
 <body>
-  <img class="body" src="/colorlib-search-23/images/grad.jpg">
+  <img class="body" src="/images/grad.jpg">
 </body>
 </html>
