--- a/10th.html
+++ b/10th.html
@@ -11,6 +11,6 @@
 
 </head>
 <body>
-  <img class="body" src="/colorlib-search-23/images/ssc.jpg">
+  <img class="body" src="/images/ssc.jpg">
 </body>
 </html>
